# systool

./: Cargo.toml  LICENSE  README.md
src/: archive.rs  command_args.rs  commands.rs  directory.rs  file.rs  functions.rs  main.rs  systems.rs  text.rs
src/systems/: arch.rs  fedora.rs  gentoo.rs  macos.rs  ubuntu.rs  void.rs
