[package]
name = "systool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rayon = { version = "1.10.0" }
binaryornot = "1.0.0"
colored = "2.1.0"
serde = { version = "1.0.201", features = ["derive"] }